# azure-tee-attestation-samples

./: .gitignore  AZURE_CONF_COMP_VM.md  README.md
local_remote_attestation/: CMakeLists.txt  README.md  lorem_ipsum  secretsharing.edl
local_remote_attestation/common/: CMakeLists.txt  attestation.cpp  dispatcher.cpp  dispatcher.h
local_remote_attestation/enclave_a/: CMakeLists.txt  ecalls.cpp
local_remote_attestation/enclave_b/: ecalls.cpp
local_remote_attestation/host/: CMakeLists.txt  enclave.h  enclave_a.cpp  enclave_b.cpp  encryption.h  host.cpp
one_enclave/: .gitignore  CMakeLists.txt  README.md  secretsharing.edl
one_enclave/client/: .gitignore  client.py  requirements.txt  setup.sh
one_enclave/common/: CMakeLists.txt  attestation.cpp  attestation.h  crypto.cpp  crypto.h  dispatcher.cpp  dispatcher.h  enclave_mgmt.hpp  keys.cpp
one_enclave/enclave_b/: CMakeLists.txt  ecalls.cpp
one_enclave/proto/: secretsharing.proto
one_enclave/server/: CMakeLists.txt  azure_api.cpp  azure_api.h  enclave.h  enclave_calls.cpp  enclave_calls.hpp  host.cpp
remote_client_server/: CMakeLists.txt  README.md  data_to_encrypt  secretsharing.edl
remote_client_server/client/: CMakeLists.txt  enclave.h  enclave_a.cpp  enclave_calls.cpp  enclave_calls.hpp  encryption.cpp  host.cpp
remote_client_server/common/: CMakeLists.txt  attestation.cpp  dispatcher.cpp  dispatcher.h  enclave_mgmt.hpp  shared.h
remote_client_server/enclave_a/: ecalls.cpp
remote_client_server/enclave_b/: ecalls.cpp
remote_client_server/proto/: secretsharing.proto
remote_client_server/server/: CMakeLists.txt  enclave_b.cpp  host.cpp
